objects/AgencyProfile__c.object
<CustomObject>
    <description>To store detailed information about the Agency, including their contact information, operational details, HUD Contact, HUD Office Executive, HUD Office Manager and other relevant attributes.</description>
    <fields>
        <fullName>AgencyAddress__c</fullName>
        <label>Agency Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>AgencyColonias__c</fullName>
        <description>Indicates if the agnecy provides services to the Colonias population (Y/N).</description>
        <inlineHelpText>Indicator of services provided to the Colonias population</inlineHelpText>
        <label>Agency Colonias</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyCounselingBudget__c</fullName>
        <description>The total Housing Counseling budget of the agency,</description>
        <inlineHelpText>Identifies Agency’s total Housing Counseling
Budget for the support and operations of the
agency. The data shall contain a numeric value
only.</inlineHelpText>
        <label>Agency Counseling Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AgencyCounselingMethods__c</fullName>
        <description>One or more counseling methods that the agency offers. For each method the agency offers, there should be a corresponding entry. No duplicate entries are allowed. At least 1 type must be specified.</description>
        <inlineHelpText>Choose one or more counseling methods that the Agency offers.</inlineHelpText>
        <label>Agency Counseling Methods</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Face to Face Counseling</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Phone Counseling</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Internet Counseling</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Group Counseling</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Video Conference</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Other Counseling</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>Phone Counseling Only</label>
                </value>
                <value>
                    <fullName>------------------</fullName>
                    <isActive>false</isActive>
                    <label>------------------</label>
                </value>
                <value>
                    <fullName>zzzzzzzzzzz</fullName>
                    <isActive>false</isActive>
                    <label>zzzzzzzzzzz</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyDunnsNumber__c</fullName>
        <defaultValue>&apos;000000000&apos;</defaultValue>
        <description>Agency Dunn &amp; Bradstreet identification
number. If provided, it must be 9 digits in
length.
If not provided the system defaults it to
‘000000000’.</description>
        <inlineHelpText>Agency Dunn &amp; Bradstreet identification number. If provided, it must be 9 digits in length.
If not provided the system defaults it to ‘000000000’.</inlineHelpText>
        <label>Agency Dunn&apos;s Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyEIN__c</fullName>
        <description>Agency federal employee identification number
or TIN (Tax Identification Number) used by IRS.
Data must be presented in following format:
‘00-0000000’.</description>
        <inlineHelpText>Agency federal employee identification number or TIN (Tax Identification Number) used by IRS. Data must be presented in following format: ‘00-0000000’.</inlineHelpText>
        <label>Agency EIN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyEmailAddress__c</fullName>
        <description>Agency&apos;s Email for public information and inquiries. Must be properly formatted as follows: xxx@xxx.xxx. When not available set value to &apos;N/A&apos;.</description>
        <label>Agency Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AgencyFAXNumber__c</fullName>
        <description>Agency&apos;s Fax Number.</description>
        <label>Agency FAX Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AgencyFaithBase__c</fullName>
        <description>Identifies the agency as a faith based agency(Y/N).</description>
        <inlineHelpText>Identifies the Agency as a faith based Agency.</inlineHelpText>
        <label>Agency Faith Base</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyLanguages__c</fullName>
        <description>All languages the agency supports (choose all that apply). If the value is not available default it to ‘English’.</description>
        <label>Agency Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                    <label>Arabic</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>ASL</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Cambodian</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Cantonese</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Chinese Mandarin</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>Creole</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>Czech</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>English</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>Farsi</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>French</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>German</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>Hindi</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>Hmong</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>Indonesian</label>
                </value>
                <value>
                    <fullName>28</fullName>
                    <label>Italian</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Korean</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Polish</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Portuguese</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Russian</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Spanish</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>Swahili</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>Turkish</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>Ukrainian</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>Vietnamese</label>
                </value>
                <value>
                    <fullName>------------</fullName>
                    <isActive>false</isActive>
                    <label>------------</label>
                </value>
                <value>
                    <fullName>zzzzzzzzzz</fullName>
                    <isActive>false</isActive>
                    <label>zzzzzzzzzz</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyMailingAddress__c</fullName>
        <description>Agency’s current mailing location address line.</description>
        <label>Agency Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingCity__c</fullName>
        <description>Agency’s mailing location address city.</description>
        <label>Agency Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingPostalCode__c</fullName>
        <description>Agency’s mailing location address ZIP code.</description>
        <label>Agency Mailing Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyMailingState__c</fullName>
        <description>Agency’s mailing location address state.</description>
        <label>Agency Mailing State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyMigrantFarmWorkers__c</fullName>
        <description>Indicates if the agency serves migrant farm workers (Y/N).</description>
        <inlineHelpText>Indicates that the Agency serves migrant farm workers.</inlineHelpText>
        <label>Agency Migrant Farm Workers</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyPhoneNumber__c</fullName>
        <description>Agency&apos;s primary phone number.</description>
        <label>Agency Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AgencyRuralArea__c</fullName>
        <description>&quot;Indicate if the agency serves households in Rural Areas (Y/N).
Note: Field is used in HUD 9902 reporting. Do not edit.&quot;</description>
        <inlineHelpText>Indicate if the Agency provides counseling in Rural Areas</inlineHelpText>
        <label>Agency Rural Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyTollFreePhone__c</fullName>
        <description>Agency&apos;s Toll-Free Number.</description>
        <label>Agency Toll Free Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>AgencyUEI__c</fullName>
        <label>Agency UEI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgencyUrbanArea__c</fullName>
        <description>Indicate if the agency serves households in Urban Areas (Y/N).
Note: Field is used in HUD 9902 reporting. Do not edit.</description>
        <inlineHelpText>Indicate if the Agency provides counseling in Urban Areas.</inlineHelpText>
        <label>Agency Urban Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AgencyWebsite__c</fullName>
        <description>Agency’s web site URL (address).</description>
        <inlineHelpText>Web address of the NWO</inlineHelpText>
        <label>Agency Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Agency_Mailing_City__c</fullName>
        <description>Agency’s mailing location address city.</description>
        <label>Agency Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Agency’s physical location address city.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDContactAddressLine2__c</fullName>
        <label>HUD Contact Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDContactAddress__c</fullName>
        <label>HUD Contact Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>HUDContactEmail__c</fullName>
        <label>HUD Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HUDContactFaxNumber__c</fullName>
        <label>HUD Contact Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDContactFirstName__c</fullName>
        <label>HUD Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDContactLastName__c</fullName>
        <label>HUD Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDContactMiddleName__c</fullName>
        <label>HUD Contact Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDContactMobileNumber__c</fullName>
        <label>HUD Contact Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDContactPhoneExtension__c</fullName>
        <label>HUD Contact Phone Number Ext.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDContactPhone__c</fullName>
        <label>HUD Contact Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveAddressLine2__c</fullName>
        <label>HUD Office Executive Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveAddress__c</fullName>
        <label>HUD Office Executive Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveEmail__c</fullName>
        <label>HUD Office Executive Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveFaxNumber__c</fullName>
        <label>HUD Office Executive Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveFirstName__c</fullName>
        <label>HUD Office Executive First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveLastName__c</fullName>
        <label>HUD Office Executive Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveMiddleName__c</fullName>
        <label>HUD Office Executive Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutiveMobileNumber__c</fullName>
        <label>HUD Office Executive Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutivePhoneExtension__c</fullName>
        <label>HUD Office Executive Phone Number Ext.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeExecutivePhone__c</fullName>
        <label>HUD Office Executive Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerAddressLine2__c</fullName>
        <label>HUD Office Manager Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerAddress__c</fullName>
        <label>HUD Office Manager Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerEmail__c</fullName>
        <label>HUD Office Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerFaxNumber__c</fullName>
        <label>HUD Office Manager Fax Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerFirstName__c</fullName>
        <label>HUD Office Manager First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerLastName__c</fullName>
        <label>HUD Office Manager Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerMiddleName__c</fullName>
        <label>HUD Office Manager Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerMobileNumber__c</fullName>
        <label>HUD Office Manager Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerPhoneExtension__c</fullName>
        <label>HUD Office Manager Phone Number Ext.</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HUDOfficeManagerPhone__c</fullName>
        <label>HUD Office Manager Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <description>Agency’s physical location address ZIP code.</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Agency’s physical location address state.</description>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <description>Agency’s current physical location address line.</description>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationCombined1__c</fullName>
        <formula>IF(
ISPICKVAL(HUDOfficeManagerAddress__StateCode__s,&apos;&apos;)  ||
ISBLANK(HUDOfficeManagerAddress__PostalCode__s) ||
ISBLANK(HUDOfficeManagerPhone__c) ||
ISBLANK(HUDOfficeManagerEmail__c) ||
ISBLANK(HUDOfficeExecutiveFirstName__c) ||
ISBLANK(HUDOfficeExecutiveLastName__c) ||
ISBLANK(HUDOfficeExecutiveAddress__Street__s) ||
ISBLANK(HUDOfficeExecutiveAddress__City__s) ||
ISPICKVAL(HUDOfficeExecutiveAddress__StateCode__s,&apos;&apos;)  ||
ISBLANK(HUDOfficeExecutiveAddress__PostalCode__s) ||
ISBLANK(HUDOfficeExecutivePhone__c) ||
ISBLANK(HUDOfficeExecutiveEmail__c),

IF(ISPICKVAL(HUDOfficeManagerAddress__StateCode__s,&apos;&apos;), &apos;HUD Office Manager Address (State/Province), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerAddress__PostalCode__s), &apos;HUD Office Manager Address (ZIP/Postal Code), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerPhone__c), &apos;HUD Office Manager Phone Number, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerEmail__c), &apos;HUD Office Manager Email, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutiveFirstName__c), &apos;HUD Office Executive First Name, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutiveLastName__c), &apos;HUD Office Executive Last Name, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutiveAddress__Street__s), &apos;HUD Office Executive Address (Street), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutiveAddress__City__s), &apos;HUD Office Executive Address (City), &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(HUDOfficeExecutiveAddress__StateCode__s,&apos;&apos;), &apos;HUD Office Executive Address (State/Province), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutiveAddress__PostalCode__s), &apos;HUD Office Executive Address (ZIP/Postal Code), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutivePhone__c), &apos;HUD Office Executive Phone Number, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeExecutiveEmail__c), &apos;HUD Office Executive Email	, &apos;, &apos;&apos;),
&apos;NO ERROR&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Combined1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidationCombined__c</fullName>
        <formula>IF(
ISBLANK(HUDContactFirstName__c) ||
ISBLANK(HUDContactLastName__c) ||
ISBLANK(HUDContactAddress__Street__s) ||
ISBLANK(HUDContactAddress__City__s) ||
ISPICKVAL(HUDContactAddress__StateCode__s,&apos;&apos;)  ||
ISBLANK(HUDContactAddress__PostalCode__s) ||
ISBLANK(HUDContactPhone__c) ||
ISBLANK(HUDContactEmail__c) ||
ISBLANK(HUDOfficeManagerFirstName__c) ||
ISBLANK(HUDOfficeManagerLastName__c) ||
ISBLANK(HUDOfficeManagerAddress__Street__s) ||
ISBLANK(HUDOfficeManagerAddress__City__s)
,
&apos;Required field(s) missing: &apos; &amp;
IF(ISBLANK(HUDContactFirstName__c), &apos;HUD Contact First Name, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDContactLastName__c), &apos;HUD Contact Last Name, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDContactAddress__Street__s), &apos;HUD Contact Address (Street), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDContactAddress__City__s), &apos;HUD Contact Address (City), &apos;, &apos;&apos;) &amp;
IF(ISPICKVAL(HUDContactAddress__StateCode__s,&apos;&apos;), &apos;HUD Contact Address (State/Province), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDContactAddress__PostalCode__s), &apos;HUD Contact Address (ZIP/Postal Code), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDContactPhone__c), &apos;HUD Contact Phone Number, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDContactEmail__c), &apos;HUD Contact Email, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerFirstName__c), &apos;HUD Office Manager First Name, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerLastName__c), &apos;HUD Office Manager Last Name, &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerAddress__Street__s), &apos;HUD Office Manager Address (Street), &apos;, &apos;&apos;) &amp;
IF(ISBLANK(HUDOfficeManagerAddress__City__s), &apos;HUD Office Manager Address (City), &apos;, &apos;&apos;),
&apos;&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validation Combined</label>
        <type>Text</type>
    </fields>
    <label>Agency Profile</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AgencyAddress__City__s</columns>
        <columns>AgencyAddress__CountryCode__s</columns>
        <columns>AgencyAddress__StateCode__s</columns>
        <columns>AgencyAddress__Street__s</columns>
        <columns>AgencyAddress__PostalCode__s</columns>
        <columns>AgencyMailingAddress__c</columns>
        <columns>AgencyWebsite__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agency Profile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Phone_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>!ISBLANK(AgencyPhoneNumber__c) &amp;&amp; NOT(REGEX(AgencyPhoneNumber__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
        <errorDisplayField>AgencyPhoneNumber__c</errorDisplayField>
        <errorMessage>Please enter a valid phone number</errorMessage>
    </validationRules>
</CustomObject>